--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@astrojs/rss": "^4.0.6",
+    "@astrojs/sitemap": "^3.1.6",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/onest": "^5.0.4",
+    "@jotadev0/belljs": "^1.0.0",
     "astro": "^4.5.16",
+    "bell-alert": "^1.1.0",
     "nanostores": "^0.10.3",
     "tailwindcss": "^3.4.3"
   }
